View Issue Details

IDProjectCategoryView StatusLast Update
0032811CommunityOCCT:Modeling Algorithmspublic2023-08-01 15:08
ReporterManycore Assigned Toifv 
PrioritynormalSeverityminor 
Status assignedResolutionopen 
PlatformWindowsOSVC++ 2015 
Product Version7.6.0 
Target VersionUnscheduled 
Summary0032811: Bad result of sweep operation due to Surface Surface Intersect Bug
DescriptionThe first picture attached is sweep algorithm failed。
After analysis, it was found that the SSI [bug_face1_intersect intresect bug_face2_intersect] lost an intersect line[picture 2]
Steps To ReproduceTopoDS_Shape Sh1;
TopoDS_Shape Sh2;
BRep_Builder B;
bool b1 = BRepTools::Read(Sh1, "C:\\sweep_path.brep", B);
bool b2 = BRepTools::Read(Sh2, "C:\\sweep_profile.brep", B);

const TopoDS_Wire & path = TopoDS::Wire(Sh1);//newProfileWires.at(i);
const TopoDS_Wire & profile = TopoDS::Wire(Sh2);//newProfileWires.at(i);
BRepOffsetAPI_MakePipeShell shellMaker(path);
shellMaker.SetTransitionMode(static_cast<BRepBuilderAPI_TransitionMode>(1));
shellMaker.Add(profile, /*WithContact*/false, /*WithCorrection*/true);
const TopoDS_Shape& shape = shellMaker.Shape();
TagsNo tags attached.
Test case number

Attached Files

  • sweep_failed.png (84,034 bytes)
  • SSI_lost_one_intersect_line.png (13,025 bytes)
  • sweep_path.brep (1,698 bytes)
  • sweep_profile.brep (5,304 bytes)
  • bug_face1_intersect.brep (24,676 bytes)
  • bug_face2_intersect.brep (26,538 bytes)
  • PPI_Deflection_0.1.png (96,704 bytes)

Relationships

parent of 0032849 closedifv Open CASCADE Modeling Algorithms - Intersection algorithm returns incomplete result 
related to 0032818 verifiedvglukhik Community Modeling Algorithms - Result of sweep operation is invalid 

Activities

Manycore

2022-01-29 11:50

developer  

sweep_failed.png (84,034 bytes)
SSI_lost_one_intersect_line.png (13,025 bytes)
sweep_path.brep (1,698 bytes)
sweep_profile.brep (5,304 bytes)
bug_face1_intersect.brep (24,676 bytes)
bug_face2_intersect.brep (26,538 bytes)

Manycore

2022-01-29 11:55

developer   ~0106659

Last edited: 2022-01-29 12:47

> lost intersect curve due to no seeds on it . the Param Param Intersect use Deflection = 0.1 to Sample Pnts, which is not precise enough to get all branch seeds
I have change the Deflection = 0.01, which works return 2 curves [see the attached picture PPI_Deflection_0.1.png]. but I known it shoud not change the tolerance to solve the problem

> I have create a branch CR32811 on git and push it.

Manycore

2022-01-29 12:42

developer   ~0106665

PPI_Deflection_0.1.png (96,704 bytes)

git

2022-01-29 15:09

administrator   ~0106674

Branch CR32811 has been created by Manycore.

SHA-1: f50111ec50aec00d656f256ab74935da9fcd0d8d


Detailed log of new commits:

Author: gelin
Date: Sat Jan 29 20:08:52 2022 +0800

    0032811: Bad result of sweep operation due to Surface Surface Intersect Bug

msv

2022-01-29 16:03

developer   ~0106675

Dear Igor, could you please check the proposed fix?

git

2022-02-01 12:21

administrator   ~0106705

Branch CR32811_1 has been created by ifv.

SHA-1: 86d194d2368d490ed3925c9fd76f09624b90ba3c


Detailed log of new commits:

Author: ifv
Date: Tue Feb 1 12:17:52 2022 +0300

    0032811: Bad result of sweep operation due to Surface Surface Intersect Bug

git

2022-02-01 12:23

administrator   ~0106706

Branch CR32811_1 has been updated forcibly by ifv.

SHA-1: 790f6216745f0f691528bdf3d880326b65e68c9e

ifv

2022-02-03 11:44

developer   ~0106727

Last edited: 2022-02-03 11:47

Dear @msv, fix is valid, but has test regressions, see
http://jenkins-test-08.nnov.opencascade.com/view/CR32811-master-ifv/view/COMPARE/
and cannot be integrated without fixing bad tests.
Note: branch CR32811_1 was used for testing instead of original branch CR32811.

git

2022-02-11 16:44

administrator   ~0106848

Branch CR32811_1 has been updated forcibly by ifv.

SHA-1: 5b6bf619ea8c6c23b3e75ce15384f9c958646dee

git

2022-02-14 16:48

administrator   ~0106895

Branch CR32811_1 has been updated forcibly by ifv.

SHA-1: f05741868a2862f59040486bc215a349ed90ca5f

git

2022-02-15 11:39

administrator   ~0106903

Branch CR32811_1 has been updated by ifv.

SHA-1: cca42430c68594af0daaac10b07fb1a6ce700b29


Detailed log of new commits:

Author: ifv
Date: Tue Feb 15 11:38:52 2022 +0300

    Modification of IntPolyh/IntPolyh_Intersection

git

2022-02-16 15:34

administrator   ~0106934

Branch CR32811_1 has been updated by ifv.

SHA-1: eab1f938c5de00097cb9ca10cdf66d1b620c2bf3


Detailed log of new commits:

Author: ifv
Date: Wed Feb 16 15:34:10 2022 +0300

    BndLib/BndLib_Add3dCurve.cxx

git

2022-02-21 12:11

administrator   ~0107005

Branch CR32811_1 has been updated forcibly by ifv.

SHA-1: cd65cebc0d248fe4209b78b4bc17cc3fb4fcb62a

msv

2022-10-17 18:32

developer   ~0111612

@ifv, what is the status of this bug?

ifv

2022-10-18 17:15

developer   ~0111639

Last edited: 2022-10-18 17:32

The intersection problem is fixed in child issue 0032849, but this case has other problems that must be fixed
The result is valid for " Right Corner" mode, but not valid for "Round Corner" and "Modification" modes for treatment discontinuities.

Issue History

Date Modified Username Field Change
2022-01-29 11:50 Manycore New Issue
2022-01-29 11:50 Manycore Assigned To => Manycore
2022-01-29 11:50 Manycore File Added: sweep_failed.png
2022-01-29 11:50 Manycore File Added: SSI_lost_one_intersect_line.png
2022-01-29 11:50 Manycore File Added: sweep_path.brep
2022-01-29 11:50 Manycore File Added: sweep_profile.brep
2022-01-29 11:50 Manycore File Added: bug_face1_intersect.brep
2022-01-29 11:50 Manycore File Added: bug_face2_intersect.brep
2022-01-29 11:55 Manycore Note Added: 0106659
2022-01-29 12:12 Manycore Summary Bad result of sweep operation due to Surface Surafce Intersect Bug => Bad result of sweep operation due to Surface Surface Intersect Bug
2022-01-29 12:42 Manycore Note Edited: 0106659
2022-01-29 12:42 Manycore Note Added: 0106665
2022-01-29 12:42 Manycore File Added: PPI_Deflection_0.1.png
2022-01-29 12:47 Manycore Note Edited: 0106659
2022-01-29 15:09 git Note Added: 0106674
2022-01-29 15:15 Manycore Assigned To Manycore => kgv
2022-01-29 15:15 Manycore Status new => assigned
2022-01-29 16:03 msv Assigned To kgv => ifv
2022-01-29 16:03 msv Note Added: 0106675
2022-02-01 12:21 git Note Added: 0106705
2022-02-01 12:23 git Note Added: 0106706
2022-02-03 11:42 ifv Assigned To ifv => msv
2022-02-03 11:44 ifv Note Added: 0106727
2022-02-03 11:47 ifv Note Edited: 0106727
2022-02-03 14:08 szy Assigned To msv => ifv
2022-02-04 12:21 ifv Time allocated 1.2.2022: 3 h. => set
2022-02-09 14:51 kgv Relationship added related to 0032818
2022-02-11 10:47 ifv Time allocated 10.2.2022: 5.5 h. => set
2022-02-11 10:48 ifv Time allocated 11.2.2022: 6.5 h. => set
2022-02-11 16:44 git Note Added: 0106848
2022-02-14 16:48 git Note Added: 0106895
2022-02-15 11:39 git Note Added: 0106903
2022-02-16 15:34 git Note Added: 0106934
2022-02-18 11:30 ifv Time allocated 14.2.2022: 6 h. => set
2022-02-18 11:31 ifv Time allocated 15.2.2022: 6 h. => set
2022-02-18 11:31 ifv Time allocated 14.2.2022: 6 h. => set
2022-02-18 11:32 ifv Time allocated Deleted 2022-02-14: 6,00 h. => deleted
2022-02-18 11:32 ifv Time allocated 16.2.2022: 6 h. => set
2022-02-18 11:33 ifv Time allocated 17.2.2022: 600 h. => set
2022-02-18 11:33 ifv Time allocated 18.2.2022: 4 h. => set
2022-02-21 10:37 ifv Relationship added parent of 0032849
2022-02-21 12:11 git Note Added: 0107005
2022-02-21 23:03 ifv Time allocated Deleted 2022-02-17: 600,00 h. => deleted
2022-02-21 23:04 ifv Time allocated 17.2.2022: 6 h. => set
2022-10-17 18:32 msv Note Added: 0111612
2022-10-18 17:15 ifv Note Added: 0111639
2022-10-18 17:32 ifv Note Edited: 0111639
2022-10-24 10:40 szy Target Version 7.7.0 => 7.8.0
2023-08-01 15:08 dpasukhi Target Version 7.8.0 => Unscheduled