0032811: Bad result of sweep operation due to Surface Surface Intersect Bug